<resources>
    <string name="app_name" translatable="false">ColecaoJogoVideoGame</string>
    <string name="autoria" translatable="false">Autor: <a href="https://www.linkedin.com/in/julliana-gnecco/">Julliana Gnecco</a></string>
    <string name="site_utfpr" translatable="false">www.utfpr.edu.br</string>
    <string name="e_mail_autor" translatable="false"><u>jullianagnecco@gmail.com</u></string>
    <string name="nome">Title:</string>
    <string name="nome_jogo">Game Title</string>
    <string name="ano_lancamento">Year:</string>
    <string name="ano_lancamento_valor">Release Year</string>
    <string name="limpar">Clean</string>
    <string name="salvar">Save</string>
    <string name="entradas_apagadas">The entries have been deleted!</string>
    <string name="o_nome_nao_pode_ser_vazio">Name cannot be empty!</string>
    <string name="o_ano_nao_pode_ser_vazio">Year cannot be empty!</string>
    <string name="jogo_valor">Game:</string>
    <string name="ano_valor">Year:</string>
    <string name="o_ano_deve_ser_um_numero_inteiro">Year must be a valid integer!</string>
    <string name="o_ano_deve_estar_entre_1972_e_o_ano_atual">The year must be between 1972 and the current year!</string>
    <string name="console">Console:</string>
    <string name="playstation">Playstation</string>
    <string name="xbox">XBox</string>
    <string name="nintendo_switch">Switch</string>
    <string name="deve_ser_marcado_pelo_menos_um_console">You must select at least one console!</string>
    <string name="tipo_midia">Media Type:</string>
    <string name="fisica">Physical</string>
    <string name="digital">Digital</string>
    <string name="acao">Action</string>
    <string name="acao_aventura">Action and Adventure</string>
    <string name="aventura">Adventure</string>
    <string name="esporte">Sports</string>
    <string name="rpg">Role-Playing (RPG)</string>
    <string name="corrida">Racing</string>
    <string name="estrategia">Strategy</string>
    <string name="midia">Media Type:</string>
    <string name="genero">Genre:</string>
    <string name="e_obrigatorio_o_tipo_de_midia">You must select a media type!</string>
    <string name="o_spinner_nao_possui_valores">Spinner contains no values!</string>
    <string name="genero_valor">Genre:</string>
    <string name="consoles">Consoles:</string>
    <string name="logo_utfpr">UTFPR Logo</string>
    <string name="descricao">Android Development Course Project</string>
    <string name="sobre">About</string>
    <string name="controle_de_jogos">Game Management</string>
    <string name="adicionar">Add</string>
    <string name="novo_jogo">New Game</string>
    <string name="nenhum_aplicativo_disponivel_para_abrir_paginas_web">No app available to open web pages!</string>
    <string name="contato_pelo_aplicativo">Contact via the app</string>
    <string name="nenhum_aplicativo_para_enviar_um_email">No app available to send an email!</string>
    <string name="escolha_o_app_de_e_mail">Choose the email app</string>
    <string name="abrir_link_com">Open with</string>
    <string name="editar">Edit</string>
    <string name="excluir">Delete</string>
    <string name="editar_jogo">Edit Game</string>
    <string name="sugerir_genero">Click to suggest a genre</string>
    <string name="ordenacao">Sorting</string>
    <string name="restaurar_padroes">Restore Defaults</string>
    <string name="as_configuracoes_voltaram_para_o_padrao_de_instalacao">Settings have been reset to default!</string>
    <string name="puzzle">Puzzle</string>
    <string name="jogo_video_game">Video Games</string>
    <string name="nome_utfpr_por_extenso">FEDERAL UNIVERSITY OF TECNOLOGY - PARANÁ</string>
    <string name="aviso">Warning</string>
    <string name="ok">OK</string>
    <string name="confirmacao">Confirmation</string>
    <string name="sim">Yes</string>
    <string name="nao">No</string>
    <string name="deseja_apagar">Do you want to delete?\n\"%1$s\"</string>
    <string name="deseja_voltar_padroes">Do you want to restore defaults?</string>
    <string name="desfazer">Undo</string>
    <string name="alteracao_realizada">Data update done</string>
    <string name="erro_ao_tentar_inserir">Error trying to insert!</string>
    <string name="erro_ao_tentar_alterar">Error trying to update!</string>
    <string name="erro_ao_tentar_excluir">Error trying to delete!</string>
    <string name="data_lancamento">Release Date:</string>
    <string name="faltou_entrar_com_data_lancamento">The release date cannot be empty!</string>
    <string name="idade_invalida">Age needs to be 1 to 67 years!</string>
    <string name="data_lancamento_valor">Release Date</string>
    <string name="nota_valor">"User Rating"</string>
    <string name="nota">Rating:</string>
    <string name="a_nota_deve_estar_entre_0_e_10">Please enter a rating from 0 to 10!</string>
    <string name="cancelar">Cancel</string>
    <string name="anotacoes_do_jogo">Notes about %1$s</string>
    <string name="deseja_apagar_anotacao">Do you want to delete this note?</string>
    <string name="to_texto_nao_pode_ser_vazio">The text cannot be empty!</string>
    <string name="nova_anotacao">New Note</string>
    <string name="edite_texto_anotacao">Edit Note</string>
    <string name="anotacoes">Notes (%1$d)</string>
</resources>